feat: Finish Header component

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ h6 {
 
 @font-face {
   font-family: myFontLogo;
-  src: url("./assets/fonts/GODOFWAR.TTF");
+  src: url("./assets/fonts/Berserker-Regular.ttf");
 }
 
 @font-face {
