feat(`Cart.jsx`): Implement all cart logic
Add logic to remove an item, clear all items, calculate total, no. of
games, and display a dot icon if there's an item in cart.

--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,11 @@ h6 {
 }
 
 @font-face {
+  font-family: myFontMedium;
+  src: url("./assets/fonts/GTWalsheimPro-Medium.woff2");
+}
+
+@font-face {
   font-family: myFontUltraBold;
   src: url("./assets/fonts/GTWalsheimPro-UltraBold.woff2");
 }
