test(`Shop.test.jsx`): DropDown component logic
DropDown
- Order by dropdown opens when clicked
- Sort by dropdown opens when clicked
- Order by options close the dropdown & update the opener
- Sort by options close the dropdown & update the opener
- Order by options update the shop items according to their order
- Sort by options update the shop items according to their sort order

--- a/src/App.css
+++ b/src/App.css
@@ -106,8 +106,10 @@ body {
   font-family: myFontRegular;
   background-color: rgb(15, 16, 17);
   min-height: 100dvh;
+  min-width: 100dvw;
 }
 
 #root {
   min-height: 100dvh;
+  min-width: 100dvw;
 }
